2007-11-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorbar.[ch]: derive from GtkEventBox instead
	of GtkMisc, but use an input-only window.

	* app/tools/gimplevelstool.c: redirect the events of the color
	bars to the handle bars. The histogram dialog has this change
	already. Functionality should be 100% restored now.

2007-11-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimphelpui.[ch]: use
	gtk_widget_set_tooltip_text() from gimp_help_set_help() and added
	gimp_help_set_help_data_with_markup() for the cases where markup
	is needed.

	* libgimpwidgets/gimpwidgets.def: updated.

	* app/tools/gimpselectionoptions.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimpwidgets-utils.c: use the new function where markup
	in tooltips is being used.

	* app/widgets/gimptoolbox-color-area.c: no need to escape the
	ampersand any longer.

2007-11-22  Jakub Steiner <jimmac@ximian.com>

	* data/images/gimp-splash.png: New unstable splash
	* data/images/gimp-splash-2.4.png: looks like we keep stable
	splashes around

2007-11-22  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimplevelstool.[ch]: use a GimpHandleBar also for the
	input frame, added a second adjustment for gamma and map between
	the linear and logarithmic gamma values in the adjustment
	callbacks, get rid of one GtkFrame just as in the histogram
	dialog. Still not finished since mouse events on the color bars
	are currently not handled.

2007-11-21  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.c: use "open %s" as the default
	web-browser command on Mac OS X.

2007-11-21  Sven Neumann  <sven@gimp.org>

	* HACKING
	* autogen.sh: dropped support for automake 1.8 and require
	automake >= 1.9.6. Require libtool 1.5 for all platforms.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c: set the combo insensitive
	when it has no items. Fixes bug #498511.

2007-11-20  Michael Natterer  <mitch@gimp.org>
