@@ -49,8 +49,7 @@ sub procedural_db_dump {
     $help = <<'HELP';
 This procedure dumps the contents of the procedural database to the specified
 file. The file will contain all of the information provided for each registered
-procedure. This file is in a format appropriate for use with the supplied
-"pdb_self_doc.el" Elisp script, which generates a texinfo document.
+procedure.
 HELP
 
     &std_pdb_misc;
